[package]
name = "docup"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.0"
html = { version = "0.6.3", optional = true }
svg = { version = "0.17.0", optional = true }
xml = { version = "0.8.20", optional = true }

[features]
default = ["md", "html"]
html = ["dep:html"]
svg = ["dep:svg"]
xml = ["dep:xml"]
md = []

